--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,10 @@ dependencies {
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
+    implementation 'com.google.firebase:firebase-storage-ktx:20.0.0'
+
+
 }
